force-app/main/default/objects/BLN_CalloutSettings__c/BLN_CalloutSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Callout Settings</label>
</CustomObject>