force-app/main/default/objects/BLN_CalloutSettings__c/fields/BLN_CurrentMulesoftAPILimit__c.field-meta.xml
<CustomField>
    <fullName>BLN_CurrentMulesoftAPILimit__c</fullName>
    <label>Current Mulesoft API Limit</label>
    <length>15</length>
    <type>Text</type>
</CustomField>