force-app/main/default/objects/BLN_CalloutSettings__c/fields/BLN_ExpiresTimeBuffer__c.field-meta.xml
<CustomField>
    <fullName>BLN_ExpiresTimeBuffer__c</fullName>
    <label>Expires Time Buffer</label>
    <length>15</length>
    <type>Text</type>
</CustomField>