force-app/main/default/objects/BLN_CalloutSettings__c/fields/BLN_IsEventPublished__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsEventPublished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Event Published</label>
    <type>Checkbox</type>
</CustomField>