force-app/main/default/objects/BLN_CalloutSettings__c/fields/BLN_LimitOfQueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>BLN_LimitOfQueueableJobs__c</fullName>
    <label>Limit of Queueable Jobs</label>
    <length>15</length>
    <type>Text</type>
</CustomField>