force-app/main/default/objects/BLN_CalloutSettings__c/fields/BLN_MinutesOfDelay__c.field-meta.xml
<CustomField>
    <fullName>BLN_MinutesOfDelay__c</fullName>
    <label>Minutes of delay</label>
    <length>15</length>
    <type>Text</type>
</CustomField>